--- a/styles.css
+++ b/styles.css
@@ -18,21 +18,9 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 125%;
-}
-
-body {
-  width: 70%;
-}
-
-main {
-  position: absolute;
-  display: flex;
-  min-height: 100vh;
-  align-items: center;
-  left: 50%;
-  transform: translate(-50%);
+.main-text {
+  margin-top: 150px;
+  width: 250px;
 }
 
 .attribution {
