--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,9 @@ main {
   transform: translate(50%);
 }
 
+.mobile-pic {
+  display: none;
+}
 .main-text {
   display: flex;
   flex-direction: column;
@@ -124,17 +127,67 @@ b {
     flex-direction: column;
     transform: translate(0%);
     width: 375px;
+    padding: 30px;
+  }
+
+  .mobile-pic {
+    display: block;
+    background: var(--soft-violet);
+    width: 100%;
+    height: 231px;
+    margin-top: 100px;
+    border-radius: 5px;
+  }
+
+  .mobile-pic img {
+    display: inline-block;
+    background-color: var(--soft-violet);
+    opacity: 0.3;
+    object-fit: fill;
+    width: inherit;
   }
 
   .main-text {
-    margin-top: 100px;
+    margin: 0;
     width: fit-content;
     padding: 0;
+    border-radius: 5px;
+  }
+
+  .main-head {
+    text-align: center;
+    padding: 40px;
+  }
+
+  .paragraph {
+    text-align: center;
+    padding: 10px 30px;
+  }
+
+  #heading-stat {
+    text-align: center;
+  }
+
+  #stats {
+    padding: 7px 0;
+  }
+
+  .first,
+  .second,
+  .third {
+    margin: 10px 0;
+  }
+  .image-view img {
+    display: none;
+  }
+
+  .attribution {
+    display: none;
   }
 
   .details {
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    margin: 30px 0;
   }
 }
